# webcam-esrgan

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
tests/: __init__.py  test_archive.py  test_camera.py  test_config.py  test_enhance.py  test_image.py  test_rsync.py  test_sftp.py
webcam_esrgan/: __init__.py  camera.py  config.py  enhance.py  image.py  sftp.py
webcam_interval_capture/: __init__.py  archive.py  camera.py  config.py  enhance.py  image.py  rsync.py  sftp.py
